--- a/РСЧИР/Практика 2/Dockerfile
+++ b/РСЧИР/Практика 2/Dockerfile
@@ -1,12 +1,7 @@
 FROM php:7.3-apache
-RUN apt-get update && apt-get install -y libmagickwand-dev --no-install-recommends && rm -rf /var/lib/apt/lists/*
-RUN printf "\n" | pecl install imagick
-RUN docker-php-ext-enable imagick
-
-
 #1 практика
-RUN apt-get update && docker-php-ext-install mysqli && docker-php-ext-enable mysqli
+RUN docker-php-ext-install mysqli && docker-php-ext-enable mysqli
 
 #для рисовалки
-RUN apt-get install -y sendmail libpng-dev
+RUN apt-get update && apt-get install -y sendmail libpng-dev
 RUN docker-php-ext-install gd
