--- a/РСЧИР/Материалы к практической работе №1-20220907/docker-compose.yml
+++ b/РСЧИР/Материалы к практической работе №1-20220907/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./src/html:/var/www/html:ro
+      - ./html:/var/www/html
     links:
       - db
 
